force-app/main/default/objects/Stock__c/fields/Country_of_Warranty_Provider__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Warranty_Provider__c</fullName>
    <label>Country of Warranty Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INDIA</fullName>
                <default>true</default>
                <label>INDIA</label>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>