force-app/main/default/objects/Stock__c/fields/No_of_waranty_days_left__c.field-meta.xml
<CustomField>
    <fullName>No_of_waranty_days_left__c</fullName>
    <formula>Warranty_end_date__c  -  NOW()</formula>
    <label>No of waranty days left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>