force-app/main/default/objects/Stock__c/fields/Price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_unit__c</fullName>
    <label>Price per unit</label>
    <precision>16</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>