force-app/main/default/objects/Stock__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_of_Warranty_Provider__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
                <default>true</default>
                <label>AP</label>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>GOA</fullName>
            </value>
            <value>
                <fullName>NEWYORK</fullName>
            </value>
            <value>
                <fullName>TEXAS</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>MIAXIN</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>