force-app/main/default/objects/Stock__c/fields/Total_price_of_the_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_price_of_the_Stock__c</fullName>
    <formula>Price_per_unit__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total price of the Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>