force-app/main/default/objects/Stock__c/fields/Waranty__c.field-meta.xml
<CustomField>
    <fullName>Waranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It consists of warranty of the product</description>
    <label>Waranty</label>
    <type>Checkbox</type>
</CustomField>