force-app/main/default/objects/Stock__c/fields/Warranty_end_date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_end_date__c</fullName>
    <label>Warranty end date</label>
    <type>DateTime</type>
</CustomField>