force-app/main/default/objects/Stock__c/fields/Warranty_Provider__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Provider__c</fullName>
    <label>Warranty Provider</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>