force-app/main/default/objects/Stock__c/fields/Warranty_start_date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_start_date__c</fullName>
    <label>Warranty start date</label>
    <type>Date</type>
</CustomField>