force-app/main/default/objects/Stock__c/recordTypes/Elec_Products.recordType-meta.xml
<RecordType>
    <fullName>Elec_Products</fullName>
    <active>true</active>
    <label>Elec Products</label>
</RecordType>