force-app/main/default/objects/Stock__c/recordTypes/Electronic_Items.recordType-meta.xml
<RecordType>
    <fullName>Electronic_Items</fullName>
    <active>false</active>
    <label>Electronic Items</label>
</RecordType>