force-app/main/default/objects/Stock__c/recordTypes/Food_Products_layout.recordType-meta.xml
<RecordType>
    <fullName>Food_Products_layout</fullName>
    <active>true</active>
    <label>Food Products layout</label>
</RecordType>