force-app/main/default/objects/Stock__c/validationRules/Stock_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Name )</errorConditionFormula>
    <errorMessage>Stock name should not be null</errorMessage>
</ValidationRule>