force-app/main/default/objects/Stock__c/validationRules/Waranty_Applicable_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Waranty_Applicable_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT( ISBLANK( Warranty_start_date__c )) ||  NOT(ISBLANK( Warranty_end_date__c ))  )  &amp;&amp;  Waranty__c = False</errorConditionFormula>
    <errorMessage>If warranty start date or end date is filled then Warranty applicable should not be blank</errorMessage>
</ValidationRule>