force-app/main/default/objects/Stock__c/validationRules/Warranty.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty</fullName>
    <active>true</active>
    <errorConditionFormula>Waranty__c = True &amp;&amp;  (ISBLANK( Warranty_end_date__c ) ||   ISBLANK(Warranty_start_date__c ))</errorConditionFormula>
    <errorMessage>Both fields should be filled</errorMessage>
</ValidationRule>